hphp/test/slow/parser/php-reserved-name-bool-2.php.expectf
Fatal error: Cannot use 'HH\Bool' as class name as it is reserved in %s on line 4
